--- a/styles/sections/_hero.scss
+++ b/styles/sections/_hero.scss
@@ -4,10 +4,6 @@
 	display: flex;
 	align-items: center;
 
-	@media (max-width: 768px) {
-		height: 95vh;
-	}
-
 	&__container {
 		width: 100%;
 		margin: auto;
